--- a/webview/src/main/res/layout/activity_webview.xml
+++ b/webview/src/main/res/layout/activity_webview.xml
@@ -36,8 +36,8 @@
                 android:textSize="20sp" />
 
         </RelativeLayout>
-        <WebView
-            android:id="@+id/webview"
+        <FrameLayout
+            android:id="@+id/web_view_fragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </LinearLayout>
